# MPI-projects

./: .gitignore  .gitmodules  LICENSE  README.md
6sem/: 1.exp  2.ConvectionEquation
7sem/hello/: main.cpp
7sem/lab1/0.mpi/: main.cpp
7sem/lab1/0.omp/: main.cpp
7sem/lab1/1/: Makefile  main.cpp
7sem/lab1/2/: main.cpp
7sem/lab1/3/: Makefile  main.cpp
7sem/seq/: main.cpp
7sem/sum/: Makefile  main.cpp
Support/: Algorithm.hpp  Evaluator.hpp  OstreamHelpers.hpp  Parsing.hpp
Support/test/: Algorithm.test.cpp  CMakeLists.txt
cxxmpi/: cxxmpi.hpp
cxxmpi/Collective/: CollectiveMessages.hpp
cxxmpi/P2P/: BlockingMessages.hpp
cxxmpi/Shared/: BuiltinTypeTraits.hpp  DataTypeSelector.hpp  Datatype.hpp  ElementaryType.hpp  misc.hpp
cxxmpi/Support/: ArrayRef.hpp  Utilities.hpp
cxxmpi/Util/: WorkSplitter.hpp
cxxmpi/impl/: ArrayRef.hpp  DataTypeSelector.hpp  Utilities.hpp
experiments/03.DerivedTypes/: main.cpp
experiments/07.Scatter/: main.cpp
experiments/09.SmartScatter/: Makefile  main.cpp
experiments/1.HelloWorld/: main.cpp
experiments/10.SendBytes/: main.cpp
experiments/11.exp/: Makefile  check.sh  main.cpp
experiments/12.ConvectionEquation/: Makefile  README.md  benchmark.pl  input.txt  input_known.txt  main.cpp
experiments/2.Harmonic/: Makefile  check.py  main.cpp
experiments/3.DerivedTypes/: main.cpp
experiments/4.SendWithVectors/: main.cpp
experiments/5.Barrier/: main.cpp
experiments/7.Scatter/: main.cpp
experiments/8.SmartHarmonic/: Makefile  main.cpp
experiments/9.SmartScatter/: main.cpp
experiments/MPI/02.Harmonic/: Makefile
experiments/MPI/15.Life/: CMakeLists.txt  README.md  main.cpp
experiments/MPI/15.Life/assets/: 1.txt  2.txt  game_of_life.txt  gun.txt
experiments/MPI/15.Life/assets/basic/: cycle.txt  dead1.txt  dead2.txt  dead3.txt  dead4.txt  dead5.txt  dead6.txt  immutable.txt
opencl/01.hello/: Makefile  main.c
opencl/02.device_info/: Makefile  main.cpp
opencl/03.square/: Makefile  main.cpp
opencl/04.bsort/: Makefile  main.cpp
test/: buildall.sh
test/cxxmpi/: CMakeLists.txt  WorkSplitter.test.cpp
(+13 files in other folders)
